arc-script/arc-script-test/insta/src/snapshots/mlir@nested-if.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/nested-if.arc
---
module @toplevel {
    func @crate_test() -> si32 {
        %x_0 = arc.constant 65 : si32
        %x_1 = arc.constant 66 : si32
        %x_2 = arc.constant 67 : si32
        %x_3 = constant true
        %x_4 = constant false
        %x_6 = "arc.if"(%x_3) ({
            "arc.block.result"(%x_0) : (si32) -> ()
        },{
            %x_5 = "arc.if"(%x_4) ({
                "arc.block.result"(%x_1) : (si32) -> ()
            },{
                "arc.block.result"(%x_2) : (si32) -> ()
            }) : (i1) -> si32
            "arc.block.result"(%x_5) : (si32) -> ()
        }) : (i1) -> si32
        return %x_6 : si32
    }
}

