arc-script/arc-script-test/insta/src/snapshots/mlir@option.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/option.arc
---
module @toplevel {
    func @crate_x_2() -> () {
        return 
    }
    func @crate_main() -> () {
        %x_4 = arc.constant 3 : si32
        %x_5 = "arc.enwrap"%x_4 { variant = crate_Option_Some } : si32 -> crate_Option
        %x_6 = "arc.is"%x_5 { variant = crate_Option_Some } : crate_Option -> i1
        return 
    }
}

