arc-script/arc-script-test/insta/src/snapshots/mlir@path.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/path.arc
---
module @toplevel {
    func @crate_main() -> () {
        %x_1 = arc.constant 1 : si32
        return 
    }
}

