arc-script/arc-script-test/insta/src/snapshots/rust@binops.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/binops.arc
---
use arcon::prelude::*;
pub fn main() -> () {
    let c_bool_0: bool = true;
    let c_i8_0: i8 = 127i8;
    let c_i16_0: i16 = 32767i16;
    let c_i32_0: i32 = 2147483647i32;
    let c_i64_0: i64 = 9223372036854775807i64;
    let c_u8_0: u8 = 255u8;
    let c_u16_0: u16 = 65535u16;
    let c_u32_0: u32 = 4294967295u32;
    let c_u64_0: u64 = 18446744073709551615u64;
    let c_f32_0: f32 = 340282350000000000000000000000000000000f32;
    let c_f64_0 : f64 = 179769313486231570000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000f64 ;
    let c1_i8_0: i8 = 126i8;
    let c1_i16_0: i16 = 32766i16;
    let c1_i32_0: i32 = 2147483646i32;
    let c1_i64_0: i64 = 9223372036854775806i64;
    let c1_u8_0: u8 = 254u8;
    let c1_u16_0: u16 = 65534u16;
    let c1_u32_0: u32 = 4294967294u32;
    let c1_u64_0: u64 = 18446744073709551614u64;
    let c1_f32_0: f32 = 34028235000000000000000000000000000000f32;
    let c1_f64_0 : f64 = 179769313486231550000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000f64 ;
    let sum_i8_0: i8 = c_i8_0 + c_i8_0;
    let sum_i16_0: i16 = c_i16_0 + c_i16_0;
    let sum_i32_0: i32 = c_i32_0 + c_i32_0;
    let sum_i64_0: i64 = c_i64_0 + c_i64_0;
    let sum_u8_0: u8 = c_u8_0 + c_u8_0;
    let sum_u16_0: u16 = c_u16_0 + c_u16_0;
    let sum_u32_0: u32 = c_u32_0 + c_u32_0;
    let sum_u64_0: u64 = c_u64_0 + c_u64_0;
    let sum_f32_0: f32 = c_f32_0 + c_f32_0;
    let sum_f64_0: f64 = c_f64_0 + c_f64_0;
    let difference_i8_0: i8 = c_i8_0 - c_i8_0;
    let difference_i16_0: i16 = c_i16_0 - c_i16_0;
    let difference_i32_0: i32 = c_i32_0 - c_i32_0;
    let difference_i64_0: i64 = c_i64_0 - c_i64_0;
    let difference_u8_0: u8 = c_u8_0 - c_u8_0;
    let difference_u16_0: u16 = c_u16_0 - c_u16_0;
    let difference_u32_0: u32 = c_u32_0 - c_u32_0;
    let difference_u64_0: u64 = c_u64_0 - c_u64_0;
    let difference_f32_0: f32 = c_f32_0 - c_f32_0;
    let difference_f64_0: f64 = c_f64_0 - c_f64_0;
    let product_i8_0: i8 = c_i8_0 * c_i8_0;
    let product_i16_0: i16 = c_i16_0 * c_i16_0;
    let product_i32_0: i32 = c_i32_0 * c_i32_0;
    let product_i64_0: i64 = c_i64_0 * c_i64_0;
    let product_u8_0: u8 = c_u8_0 * c_u8_0;
    let product_u16_0: u16 = c_u16_0 * c_u16_0;
    let product_u32_0: u32 = c_u32_0 * c_u32_0;
    let product_u64_0: u64 = c_u64_0 * c_u64_0;
    let product_f32_0: f32 = c_f32_0 * c_f32_0;
    let product_f64_0: f64 = c_f64_0 * c_f64_0;
    let quotient_i8_0: i8 = c_i8_0 / c_i8_0;
    let quotient_i16_0: i16 = c_i16_0 / c_i16_0;
    let quotient_i32_0: i32 = c_i32_0 / c_i32_0;
    let quotient_i64_0: i64 = c_i64_0 / c_i64_0;
    let quotient_u8_0: u8 = c_u8_0 / c_u8_0;
    let quotient_u16_0: u16 = c_u16_0 / c_u16_0;
    let quotient_u32_0: u32 = c_u32_0 / c_u32_0;
    let quotient_u64_0: u64 = c_u64_0 / c_u64_0;
    let quotient_f32_0: f32 = c_f32_0 / c_f32_0;
    let quotient_f64_0: f64 = c_f64_0 / c_f64_0;
    let remainder_i8_0: i8 = c_i8_0 % c_i8_0;
    let remainder_i16_0: i16 = c_i16_0 % c_i16_0;
    let remainder_i32_0: i32 = c_i32_0 % c_i32_0;
    let remainder_i64_0: i64 = c_i64_0 % c_i64_0;
    let remainder_u8_0: u8 = c_u8_0 % c_u8_0;
    let remainder_u16_0: u16 = c_u16_0 % c_u16_0;
    let remainder_u32_0: u32 = c_u32_0 % c_u32_0;
    let remainder_u64_0: u64 = c_u64_0 % c_u64_0;
    let remainder_f32_0: f32 = c_f32_0 % c_f32_0;
    let remainder_f64_0: f64 = c_f64_0 % c_f64_0;
    let lt_i8_0: bool = c_i8_0 <= c_i8_0;
    let lt_i16_0: bool = c_i16_0 <= c_i16_0;
    let lt_i32_0: bool = c_i32_0 <= c_i32_0;
    let lt_i64_0: bool = c_i64_0 <= c_i64_0;
    let lt_u8_0: bool = c_u8_0 <= c_u8_0;
    let lt_u16_0: bool = c_u16_0 <= c_u16_0;
    let lt_u32_0: bool = c_u32_0 <= c_u32_0;
    let lt_u64_0: bool = c_u64_0 <= c_u64_0;
    let lt_f32_0: bool = c_f32_0 <= c_f32_0;
    let lt_f64_0: bool = c_f64_0 <= c_f64_0;
    let le_i8_0: bool = c_i8_0 < c_i8_0;
    let le_i16_0: bool = c_i16_0 < c_i16_0;
    let le_i32_0: bool = c_i32_0 < c_i32_0;
    let le_i64_0: bool = c_i64_0 < c_i64_0;
    let le_u8_0: bool = c_u8_0 < c_u8_0;
    let le_u16_0: bool = c_u16_0 < c_u16_0;
    let le_u32_0: bool = c_u32_0 < c_u32_0;
    let le_u64_0: bool = c_u64_0 < c_u64_0;
    let le_f32_0: bool = c_f32_0 < c_f32_0;
    let le_f64_0: bool = c_f64_0 < c_f64_0;
    let gt_i8_0: bool = c_i8_0 > c_i8_0;
    let gt_i16_0: bool = c_i16_0 > c_i16_0;
    let gt_i32_0: bool = c_i32_0 > c_i32_0;
    let gt_i64_0: bool = c_i64_0 > c_i64_0;
    let gt_u8_0: bool = c_u8_0 > c_u8_0;
    let gt_u16_0: bool = c_u16_0 > c_u16_0;
    let gt_u32_0: bool = c_u32_0 > c_u32_0;
    let gt_u64_0: bool = c_u64_0 > c_u64_0;
    let gt_f32_0: bool = c_f32_0 > c_f32_0;
    let gt_f64_0: bool = c_f64_0 > c_f64_0;
    let ge_i8_0: bool = c_i8_0 >= c_i8_0;
    let ge_i16_0: bool = c_i16_0 >= c_i16_0;
    let ge_i32_0: bool = c_i32_0 >= c_i32_0;
    let ge_i64_0: bool = c_i64_0 >= c_i64_0;
    let ge_u8_0: bool = c_u8_0 >= c_u8_0;
    let ge_u16_0: bool = c_u16_0 >= c_u16_0;
    let ge_u32_0: bool = c_u32_0 >= c_u32_0;
    let ge_u64_0: bool = c_u64_0 >= c_u64_0;
    let ge_f32_0: bool = c_f32_0 >= c_f32_0;
    let ge_f64_0: bool = c_f64_0 >= c_f64_0;
    let eq_bool_0: bool = c_bool_0 == c_bool_0;
    let eq_i8_0: bool = c_i8_0 == c_i8_0;
    let eq_i16_0: bool = c_i16_0 == c_i16_0;
    let eq_i32_0: bool = c_i32_0 == c_i32_0;
    let eq_i64_0: bool = c_i64_0 == c_i64_0;
    let eq_u8_0: bool = c_u8_0 == c_u8_0;
    let eq_u16_0: bool = c_u16_0 == c_u16_0;
    let eq_u32_0: bool = c_u32_0 == c_u32_0;
    let eq_u64_0: bool = c_u64_0 == c_u64_0;
    let eq_f32_0: bool = c_f32_0 == c_f32_0;
    let eq_f64_0: bool = c_f64_0 == c_f64_0;
    let ne_bool_0: bool = c_bool_0 != c_bool_0;
    let ne_i8_0: bool = c_i8_0 != c_i8_0;
    let ne_i16_0: bool = c_i16_0 != c_i16_0;
    let ne_i32_0: bool = c_i32_0 != c_i32_0;
    let ne_i64_0: bool = c_i64_0 != c_i64_0;
    let ne_u8_0: bool = c_u8_0 != c_u8_0;
    let ne_u16_0: bool = c_u16_0 != c_u16_0;
    let ne_u32_0: bool = c_u32_0 != c_u32_0;
    let ne_u64_0: bool = c_u64_0 != c_u64_0;
    let ne_f32_0: bool = c_f32_0 != c_f32_0;
    let ne_f64_0: bool = c_f64_0 != c_f64_0;
    let land_0: bool = c_bool_0 + c_bool_0;
    let lor_0: bool = c_bool_0 || c_bool_0;
    let band_i8_0: i8 = c_i8_0 & c_i8_0;
    let band_i16_0: i16 = c_i16_0 & c_i16_0;
    let band_i32_0: i32 = c_i32_0 & c_i32_0;
    let band_i64_0: i64 = c_i64_0 & c_i64_0;
    let band_u8_0: u8 = c_u8_0 & c_u8_0;
    let band_u16_0: u16 = c_u16_0 & c_u16_0;
    let band_u32_0: u32 = c_u32_0 & c_u32_0;
    let band_u64_0: u64 = c_u64_0 & c_u64_0;
    let bor_i8_0: i8 = c_i8_0 | c_i8_0;
    let bor_i16_0: i16 = c_i16_0 | c_i16_0;
    let bor_i32_0: i32 = c_i32_0 | c_i32_0;
    let bor_i64_0: i64 = c_i64_0 | c_i64_0;
    let bor_u8_0: u8 = c_u8_0 | c_u8_0;
    let bor_u16_0: u16 = c_u16_0 | c_u16_0;
    let bor_u32_0: u32 = c_u32_0 | c_u32_0;
    let bor_u64_0: u64 = c_u64_0 | c_u64_0;
    let bxor_i8_0: i8 = c_i8_0 ^ c_i8_0;
    let bxor_i16_0: i16 = c_i16_0 ^ c_i16_0;
    let bxor_i32_0: i32 = c_i32_0 ^ c_i32_0;
    let bxor_i64_0: i64 = c_i64_0 ^ c_i64_0;
    let bxor_u8_0: u8 = c_u8_0 ^ c_u8_0;
    let bxor_u16_0: u16 = c_u16_0 ^ c_u16_0;
    let bxor_u32_0: u32 = c_u32_0 ^ c_u32_0;
    let bxor_u64_0: u64 = c_u64_0 ^ c_u64_0;
    let pow_f32_0: f32 = c_f32_0.pow(c1_f32_0);
    let pow_f64_0: f64 = c_f64_0.pow(c1_f64_0);
    ()
}


