arc-script/arc-script-test/insta/src/snapshots/rust@enum-pattern-nested.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/enum-pattern-nested.arc
---
use arcon::prelude::*;
arcorn::declare_enum! { enum Baz { Baz_Some (i32) , Baz_None (()) } }
arcorn::declare_enum! { enum Foo { Foo_Bar (Baz) , Foo_None (()) } }
pub fn x_5() -> () {
    ()
}
pub fn main() -> () {
    let x_0: Foo = Foo_Bar(Baz_Some(5i32));
    if arcorn::is!(x_0, Foo_Bar) {
        let x_2: Baz = arcorn::unwrap!(x_0, Foo_Bar);
        if arcorn::is!(x_2, Baz_Some) {
            let x_4: i32 = arcorn::unwrap!(x_2, Baz_Some);
            ()
        } else {
            x_5()
        }
    } else {
        x_5()
    }
}


