arc-script/arc-script-test/insta/src/snapshots/rust@enums.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/enums.arc
---
use arc_script::arcorn;
use arcon::prelude::*;
#[arcorn::rewrite]
pub enum Foo {
    Foo_Bar(u32),
    Foo_Baz(f32),
}
pub fn main() -> () {
    let a_0: u32 = 200u32;
    let b_0: f32 = 2f32;
    let c_0: Foo = Foo_Bar(a_0);
    let d_0: u32 = arcorn::unwrap!(c_0, Foo_Bar);
    let e_0: Foo = Foo_Baz(b_0);
    let f_0: bool = arcorn::is!(e_0, Foo_Baz);
    ()
}


