arc-script/arc-script-test/insta/src/snapshots/rust@fib.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/fib.arc
---
use arc_script::arcorn;
use arcon::prelude::*;
pub fn fib(n_0: i32) -> i32 {
    if n_0 > 2i32 {
        fib(n_0 - 1i32) + fib(n_0 - 2i32)
    } else {
        0i32
    }
}
pub fn test() -> i32 {
    fib(5i32)
}


