arc-script/arc-script-test/insta/src/snapshots/rust@fun.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/fun.arc
---
use arcon::prelude::*;
pub fn max(a_0: i32, b_0: i32) -> i32 {
    let c_0: bool = a_0 > b_0;
    if c_0 {
        a_0
    } else {
        b_0
    }
}
pub fn test() -> i32 {
    max(1i32, 2i32)
}


